--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@react-three/drei": "^9.40.0",
     "@react-three/fiber": "^8.9.0",
     "@react-three/postprocessing": "^2.7.0",
+    "gltf-import-export": "^1.0.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
